Allowing start in custom locations

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,11 +25,7 @@
     integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
     crossorigin="" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-
-  <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
-    integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
-    crossorigin=""></script>
-  <title>React App</title>
+  <title>Ivy</title>
 </head>
 
 <body>
@@ -46,5 +42,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+
+<style>
+  .pac-container {
+    z-index: 2000;
+  }
+</style>
 
 </html>
