--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,8 +11,7 @@
   <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
 
   <!-- Google API script -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_KEY%"
-    async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_KEY%"></script>
   
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <title>Ivy</title>
