--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,15 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
-  
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
 
   <!-- Google API script -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_KEY%"></script>
-  
+  <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_KEY%&libraries=places"></script>
+
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <title>Ivy</title>
 </head>
