--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,8 @@
   <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
 
   <!-- Google API script -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_KEY%&libraries=places"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_KEY%&libraries=places,geometry"></script>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <title>Ivy</title>
